@@ -170,12 +170,17 @@ manpage.
 .IP "inherit property database [database ...]"
 Like set, but unsets the database-local value, and reverts to inherit
 from the default again.
-.IP discover
+.IP "discover [expression]"
 Returns a list of remote databases that were discovered by
 .BR merovingian (1).
 All databases listed can be connected to via the local MonetDB Database
 Server as if it were local databases.  The connection is redirected or
-proxied based on configuration settings.
+proxied based on configuration settings.  If
+.I expression
+is given, only those discovered databases are returned for which their
+URI matches the expression.  The expression syntax follows a limited
+shell-globbing style, where the * in any position is expanded to an
+arbitrary string.
 .IP \-h
 .IP "help [command]"
 Shows general help, or short help for a given command.
